@@ -1401,6 +1401,9 @@ the batch script.
 \fBBASIL_RESERVATION_ID\fR
 The reservation ID on Cray systems running ALPS/BASIL only.
 .TP
+\fBSLURM_ARRAY_ID\fR
+Index of job array element.
+.TP
 \fBSLURM_CPU_BIND\fR
 Set to value of the \-\-cpu_bind\fR option.
 .TP
