@@ -58,6 +58,7 @@ COMMAND CHANGES (see man pages for details)
    "JOBID_TASKID.STEPID".
  - Fully removed deprecated sacct --dump --fdump options.
  - Added SLURM_SUBMIT_HOST to salloc, sbatch and srun job environment.
+ - Added SLURM_ARRAY_ID to environment of job array.
 
 OTHER CHANGES
 =============
